<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_body"
    tools:context=".MainActivity" >

    <!-- HEADER -->

				

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_header" >

        <RelativeLayout
            android:id="@+id/title_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" >

            <TextView
                android:id="@+id/title_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/img_flash"
                android:text="@string/pubroad"
                android:textSize="35sp" />

            <ImageView
                android:id="@+id/img_flash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_header_flash" />
        </RelativeLayout>
    </RelativeLayout>

    <!-- FIN DU HEADER -->

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" >

        <ImageView
            android:id="@+id/img_tree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_tree_search" />

        <TextView
            android:id="@+id/destination_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13dp"
            android:layout_toRightOf="@+id/img_tree"
            android:text="@string/destination"
            android:textSize="21dp" />

        <Button
            android:id="@+id/back_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="21dp"
            android:layout_toRightOf="@+id/destination_search"
            android:background="@drawable/icon_back" />

    </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/relativeLayout2"
            android:layout_below="@+id/relativeLayout2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp" >

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/img_tree"
                android:background="@color/input"
                android:ems="10"
                android:hint="@string/search_ex_1"
                android:paddingLeft="10dp" />
           <Button
            android:id="@+id/rechercher"
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="3dp"
            android:layout_alignLeft="@+id/editText1"
            android:layout_below="@+id/editText1"
            android:textSize="16sp"
            android:text="@string/searcher"
            android:background="@drawable/bg_header"
        	 />
           </RelativeLayout>

           <RelativeLayout
               android:id="@+id/relativeLayout4"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignLeft="@+id/relativeLayout3"
               android:layout_below="@+id/relativeLayout3"
               android:layout_marginTop="30dp" >

		    <ImageView
		        android:id="@+id/img_warning"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerVertical="true"
		        android:src="@drawable/icon_warning"
		        android:textSize="22sp" />

		   	<TextView
		   	    android:id="@+id/msg_warning"
		   	    android:layout_width="wrap_content"
		   	    android:layout_height="wrap_content"
		   	    android:layout_centerVertical="true"
		   	    android:layout_marginLeft="12dp"
		   	    android:layout_toRightOf="@+id/img_warning"
		   	    android:text="@string/warning"
		   	    android:textSize="14sp" />

        </RelativeLayout>
		<RelativeLayout
               android:id="@+id/relativeLayout5"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignLeft="@+id/relativeLayout4"
               android:layout_below="@+id/relativeLayout4"
               android:layout_marginTop="25dp" >
		   	<TextView
	      android:id="@+id/exemple_search"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_alignLeft="@+id/img_warning"
	      android:layout_below="@+id/msg_warning"
	      android:text="@string/exemple"
	      android:textSize="14sp" /> 

        <TextView
            android:id="@+id/msg1_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/exemple_search"
            android:layout_below="@+id/exemple_search"
            android:layout_marginTop="8dp"
            android:text="@string/msg1"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/msg2_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/msg1_search"
            android:layout_below="@+id/msg1_search"
            android:layout_marginTop="8dp"
            android:text="@string/msg2"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/msg4_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/msg2_search"
            android:layout_below="@+id/msg2_search"
            android:layout_marginTop="8dp"
            android:text="@string/msg4"
            android:textSize="14sp" />
		    </RelativeLayout>
		    <!-- FOOTER -->
   <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/bg_header" >
    </RelativeLayout>
    <!-- FIN DU FOOTER -->
	   <RelativeLayout
	        android:id="@+id/loaderlayout"
	        android:layout_width="wrap_content"
	        android:background="#e6e6e6"
		    android:layout_centerHorizontal="true"
		    android:layout_centerVertical="true"
	        android:layout_height="wrap_content">
		   <ImageView
		       android:id="@+id/loader"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:src="@drawable/sablier" />

		   <TextView
		       android:id="@+id/text_load"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:layout_centerVertical="true"
		       android:layout_marginLeft="-12dp"
		       android:textSize="25dp"
		       android:layout_toRightOf="@id/loader"
		       android:text="Chargement..." />

		</RelativeLayout>
</RelativeLayout>