<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_body"
    tools:context=".MainActivity" >

    <!-- HEADER -->

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_header" >

        <RelativeLayout
            android:id="@+id/title_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" >

            <TextView
                android:id="@+id/title_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/img_flash"
                android:text="@string/pubroad"
                android:textSize="35sp" />

            <ImageView
                android:id="@+id/img_flash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_header_flash" />
        </RelativeLayout>
    </RelativeLayout>

    <!-- FIN DU HEADER -->
    
  <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" >

        <ImageView
            android:id="@+id/img_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_history" />

        <TextView
            android:id="@+id/history_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13dp"
            android:layout_toRightOf="@+id/img_history"
            android:text="@string/history_history"
            android:textSize="21dp" />

        <Button
            android:id="@+id/back_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/history_history"
            android:background="@drawable/icon_back" />

    </RelativeLayout>
            
  <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" >
        

        <Button
            android:id="@+id/delete"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="230dp"
            android:layout_toRightOf="@+id/history_recent"
            android:text="@string/delete_history"
            android:textSize="12.5sp"
            android:background="@drawable/bg_header" />


	
	        </RelativeLayout>
	         <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout3"
		android:layout_marginLeft="27dp"
        android:layout_marginTop="7dp"
        
         >
<RelativeLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity" 
    android:id="@+id/emptyView">
<RelativeLayout
        android:id="@+id/relativeLayoute4"
        android:layout_height="65dp"
        android:layout_width="313dp"
        android:background="#e6e6e6"
 >

        <RelativeLayout
            android:id="@+id/relativeLayouts4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" >

		<ImageView
		        android:id="@+id/img_warning"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerVertical="true"
		        android:src="@drawable/icon_warning" />

        <TextView
            android:id="@+id/txtNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/img_warning"
            android:text="Historique vide !"
            android:textSize="20sp" />
		</RelativeLayout> 
	         </RelativeLayout> 

</RelativeLayout>
		<ListView
		android:id="@+id/lvListe"
		android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:layout_centerVertical="true"
	    android:dividerHeight="8dp"
	    android:divider="@android:color/transparent"
	    > 
		</ListView>
	    
	       </RelativeLayout>
		
		       <!--  -->
		 <!-- FOOTER -->
   <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/bg_header" >
    </RelativeLayout>
    <!-- FIN DU FOOTER -->
</RelativeLayout>